--- a/src/styles.scss
+++ b/src/styles.scss
@@ -130,6 +130,9 @@ $table-striped-bg: $light;
   padding-left: 28px !important;
 }
 
+//Badge styles
+$badge-font-size: .70em;
+
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
