--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -211,10 +211,7 @@
 </div>
 
 <div class="offcanvas offcanvas-end " data-bs-scroll="true" data-bs-backdrop="false" id="offcanvasScrolling">
-    <div class="offcanvas-header border-bottom border-top justify-content-start py-2">
-        <div class="bg-transparent-primary rounded h5 p-2 mb-0 me-2 text-center">
-            <i class="fa-solid fa-filter" style="width: 20px;"></i>
-        </div>
+    <div class="offcanvas-header border-bottom border-top justify-content-start py-2" style="height: 53px;">
         <h5 class="offcanvas-title mb-0">Filters</h5>
         <button class="btn p-0 ms-auto" ngbTooltip="Close" placement="bottom" data-bs-dismiss="offcanvas"><i
                 class="fa-solid fa-xmark" style="font-size: 18px;"></i></button>
