--- a/src/app/components/client-form/client-form.component.html
+++ b/src/app/components/client-form/client-form.component.html
@@ -1,132 +1,72 @@
-<div class="modal-header" ngbAutofocus>
-    <h5 class="my-auto" *ngIf="id! == 0">Add Client</h5>
-    <h5 class="my-auto" *ngIf="id! > 0">Edit Client</h5>
-    <button class="btn p-0" ngbTooltip="Close" placement="bottom" (click)="closeModal('dismiss')"><i class="fa-solid fa-xmark" style="font-size: 18px;"></i></button>
+<div class="modal-header py-2" ngbAutofocus>
+    <h5 class="modal-title">
+        <span *ngIf="!isUpdateMode">Add Client</span>
+        <span *ngIf="isUpdateMode">Edit Client</span>
+    </h5>
+    <button class="btn btn-lg btn-circle btn-circle-secondary" (click)="closeModal()"><i
+            class="fa-solid fa-xmark"></i></button>
 </div>
-<div class="modal-body text-center" *ngIf="gettingClient">
-    <app-loading-indicator [message]="loadingClientsMessage"></app-loading-indicator>
-</div>
-<div class="modal-body" *ngIf="!gettingClient">
-    <form [formGroup]="form">
-        <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" formControlName="name"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.name.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.name.errors?.required">Required field</div>
-                <div *ngIf="form.controls.name.errors?.maxlength">Exceeded the max length of 255 characters</div>
-            </div>
+<form class="modal-body" [formGroup]="form">
+    <div class="mb-3">
+        <label for="firstName" class="form-label">First Name</label>
+        <input type="text" class="form-control" id="firstName" formControlName="firstName"
+            [ngClass]="{ 'is-invalid': form.controls.firstName.errors && submitted}">
+        <div class="invalid-feedback">
+            <div *ngIf="form.controls.firstName.errors?.required">Required field</div>
         </div>
-        <div class="mb-3">
-            <label for="surname" class="form-label">Surname</label>
-            <input type="text" class="form-control" id="surname" formControlName="surname"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.name.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.surname.errors?.required">Required field</div>
-                <div *ngIf="form.controls.surname.errors?.maxlength">Exceeded the max length of 255 characters</div>
-            </div>
+    </div>
+    <div class="mb-3">
+        <label for="lastName" class="form-label">Last Name</label>
+        <input type="text" class="form-control" id="lastName" formControlName="lastName"
+            [ngClass]="{ 'is-invalid': form.controls.lastName.errors && submitted}">
+        <div class="invalid-feedback">
+            <div *ngIf="form.controls.lastName.errors?.required">Required field</div>
         </div>
-        <div class="mb-3">
-            <label for="companyName" class="form-label">Company Name</label>
-            <input type="text" class="form-control" id="companyName" formControlName="companyName"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.companyName.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.companyName.errors?.maxlength">Exceeded the max length of 255 characters
-                </div>
-            </div>
-            <div class="form-text">Leave blank if the client does not belong to a company.</div>
+    </div>
+    <div class="mb-3">
+        <label for="company" class="form-label">Company</label>
+        <input type="text" class="form-control" id="company" formControlName="company">
+    </div>
+
+    <div class="mb-3">
+        <label class="form-label">Tags</label>
+        <app-tag-selector [tags]="tags" (selectedTags)="selectedTagsEventHandler($event)"></app-tag-selector>
+    </div>
+
+    <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="text" class="form-control" id="email" formControlName="email"
+            [ngClass]="{ 'is-invalid': form.controls.email.errors && submitted}">
+        <div class="invalid-feedback">
+            <div *ngIf="form.controls.email.errors?.required">Required field</div>
+            <div *ngIf="form.controls.email.errors?.email">Invalid email</div>
         </div>
-        <div class="mb-3">
-            <label class="d-block mb-2">Tags</label>
-            <div *ngIf="gettingTagSet">
-                <app-loading-indicator [message]="loadingTagsMessage"></app-loading-indicator>
-            </div>
-            <div class="d-flex flex-wrap" *ngIf="!gettingTagSet">
-                <span class="me-1 mb-1" *ngFor="let tag of tags">
-                    <input type="checkbox" class="btn-check" id="{{tag.name}}" value="{{tag.name}}"
-                        (change)="toggleTag($event)" [checked]="checkTag(tag.name)">
-                    <label class="btn btn-outline-primary btn-sm rounded-pill"
-                        for="{{tag.name}}">{{tag.name}}</label><br>
-                </span>
-                <div class="form-text d-block w-100">Select tags that best describe the client.</div>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="text" class="form-control" id="email" formControlName="email"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.email.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.email.errors?.required">Required field</div>
-                <div *ngIf="form.controls.email.errors?.email">Invalid email address</div>
-                <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 255 characters</div>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="cellNumber" class="form-label">Cell Number</label>
-            <input type="text" class="form-control" id="cellNumber" formControlName="cellNumber"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.cellNumber.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.cellNumber.errors?.required">Required field</div>
-                <div *ngIf="form.controls.cellNumber.errors?.maxlength">Maximum 10 characters</div>
-                <div *ngIf="form.controls.cellNumber.errors?.minlength">Minimum 10 characters</div>
-                <div *ngIf="form.controls.cellNumber.errors?.pattern">Numeric values only</div>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="telNumber" class="form-label">Telephone Number</label>
-            <input type="text" class="form-control" id="telNumber" formControlName="telNumber"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.telNumber.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.telNumber.errors?.maxlength">Maximum 10 characters</div>
-                <div *ngIf="form.controls.telNumber.errors?.minlength">Minimum 10 characters</div>
-                <div *ngIf="form.controls.telNumber.errors?.pattern">Numeric values only</div>
-            </div>
-            <div class="form-text">Leave blank if the client does not have a telephone number.</div>
-        </div>
-        <div class="mb-3">
-            <label for="dateLastContacted" class="form-label">Date Last Contacted</label>
-            <input type="date" class="form-control" id="dateLastContacted" formControlName="dateLastContacted"
-                max="{{today | date:'yyyy-MM-dd'}}"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.dateLastContacted.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.dateLastContacted.errors?.required">Required field</div>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="dateFollowUp" class="form-label">Follow Up Date</label>
-            <input type="date" class="form-control" id="dateFollowUp" formControlName="dateFollowUp"
-                min="{{today | date:'yyyy-MM-dd'}}"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.dateFollowUp.errors}">
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.dateFollowUp.errors?.required">Required field</div>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="recentInformation" class="form-label">Recent Information</label>
-            <textarea type="text" class="form-control" id="recentInformation" formControlName="recentInformation" rows="5"
-                [ngClass]="{ 'is-invalid': submitted && form.controls.recentInformation.errors}"></textarea>
-            <div class="invalid-feedback">
-                <div *ngIf="form.controls.recentInformation.errors?.maxlength">Exceeded the max length of 255 characters</div>
-            </div>
-        </div>
-    </form>
-</div>
-<div class="modal-footer bg-white">
-    <button type="button" class="btn btn-secondary" (click)="closeModal('dismiss')">Cancel</button>
-    <button type="button" class="btn btn-primary" (click)="submit()" [disabled]="updatingClient || addingClient || gettingClient || gettingTagSet">
-        <div *ngIf="id! == 0">
-            <span *ngIf="!addingClient">Add Client</span>
-            <div class="d-flex align-items-center" *ngIf="addingClient">
-                <span class="spinner-border spinner-border-sm"></span>
-                <span class="ms-2">Adding Client</span>
-            </div>
-        </div>
-        <div *ngIf="id! > 0">
-            <span *ngIf="!updatingClient">Update Client</span>
-            <div class="d-flex align-items-center" *ngIf="updatingClient">
-                <span class="spinner-border spinner-border-sm"></span>
-                <span class="ms-2">Updating Client</span>
-            </div>
-        </div>
+    </div>
+    <div class="mb-3">
+        <label for="cellphone" class="form-label">Cellphone</label>
+        <input type="text" class="form-control" id="cellphone" formControlName="cellphone">
+    </div>
+    <div class="mb-3">
+        <label for="telephone" class="form-label">Telephone</label>
+        <input type="text" class="form-control" id="telephone" formControlName="telephone">
+    </div>
+    <div class="mb-3">
+        <label for="dateLastContacted" class="form-label">Last Contacted</label>
+        <input type="date" class="form-control" id="dateLastContacted" formControlName="dateLastContacted" max="{{today | date:'yyyy-MM-dd'}}">
+    </div>
+    <div class="mb-3">
+        <label for="dateFollowUp" class="form-label">Follow Up</label>
+        <input type="date" class="form-control" id="dateFollowUp" formControlName="dateFollowUp" min="{{today | date:'yyyy-MM-dd'}}">
+    </div>
+    <div class="mb-3">
+        <label for="recentInfo" class="form-label">Recent Info</label>
+        <textarea id="recentInfo" formControlName="recentInfo" rows="5" class="form-control"></textarea>
+    </div>
+</form>
+<div class="modal-footer border-top-0 bg-secondary">
+    <button class="btn btn-secondary" (click)="closeModal()">Cancel</button>
+    <button class="btn btn-primary" (click)="submit()">
+        <span *ngIf="!isUpdateMode">Add Client</span>
+        <span *ngIf="isUpdateMode">Update Client</span>
     </button>
 </div>
