--- a/src/app/components/loading-indicator/loading-indicator.component.html
+++ b/src/app/components/loading-indicator/loading-indicator.component.html
@@ -1,2 +1,4 @@
-<div class="spinner-border spinner-border-sm" role="status"></div>
-<span class="ms-2 text-nowrap">{{message}}</span>
+<span *ngIf="loading">
+    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+    Loading...
+</span>
