--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -1,65 +1,60 @@
-<div class="p-3">
-    <div class="bg-white border rounded">
-        <div class="d-flex flex-wrap text-nowrap align-items-center border-bottom px-3 py-2 overflow-auto">
-            <h5 class="my-0 me-auto">Clients</h5>
+<div class="d-flex border-bottom align-items-center px-3 py-2 bg-white">
+    <h5 class="mb-0 me-auto">Clients</h5>
+    <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Refresh">
+        <i class="fa-solid fa-refresh"></i>
+    </button>
+    <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Download">
+        <i class="fa-solid fa-download"></i>
+    </button>
+    <button class="btn btn-circle btn-circle-primary" placement="bottom" ngbTooltip="Add" (click)="openClientFormModal()">
+        <i class="fa-solid fa-plus"></i>        
+    </button>
+</div>
+<div class="d-flex align-items-center px-3 py-2">
+    <div class="input-group w-50 me-2">
+        <input type="search" class="form-control" placeholder="Search name, surname, company..." aria-label="Recipient's username with two button addons">
+        <button class="btn bg-white border" ngbTooltip="Search" placement="bottom"><i class="fa-solid fa-search"></i></button>
+        <button class="btn bg-white border" ngbTooltip="Filters" placement="bottom"><i class="fa-solid fa-filter"></i></button>
+      </div>
+    <span class="me-auto">100 results found</span>
+    <button class="btn btn-link me-2" (click)="resetPage()" [disabled]="loadingClients">Reset</button>
+    <button class="btn bg-white border text-primary" (click)="previousPage()" *ngIf="page > 0" [disabled]="loadingClients || page == 1">Previous</button>
+    <span class="mx-3">Page {{page}}</span>
+    <button class="btn bg-white border text-primary" (click)="nextPage()" [disabled]="loadingClients || this.clients.length == 0">Next</button>
+</div>
+<div class="px-3">
+    <table class="table table-hover border bg-white align-middle">
+        <thead>
+            <tr class="bg-dark text-white text-nowrap">
+                <th scope="col">Full Name</th>
+                <th scope="col">Company</th>
+                <th scope="col">Tags</th>
+                <th scope="col">Last Contacted</th>
+                <th scope="col">Updated</th>
+                <th scope="col">Last Editor</th>
+            </tr>
+        </thead>
+        <tbody class="border-top">
+            <tr>
+                <td colspan="12" class="text-center" *ngIf="loadingClients">
+                    <app-loading-indicator [loading]="loadingClients"></app-loading-indicator>
+                </td>
+            </tr>
+            <tr *ngIf="clients.length == 0 && !loadingClients">
+                <td colspan="12" class="text-center">No data found</td>
+            </tr>
+            <tr *ngFor="let client of clients" (click)="openClientDetailsModal(client)">
+                <td class="border-end text-nowrap">{{client.firstName}} {{client.lastName}}</td>
+                <td class="border-end text-wrap" style="max-width: 300px;">{{client.company}}</td>
+                <td class="text-wrap border-end" style="max-width: 300px;">
 
-            <div class="search-input me-md-2 me-0 my-md-0 my-3" style="width: 400px;">
-                <i class="fa-solid fa-search"></i>
-                <input type="search" class="bg-secondary border-0 form-control w-100" placeholder="Search name, surname, company...">
-            </div>
+                    <span class="badge rounded-pill bg-transparent-primary me-1" *ngFor="let clientTag of client.clientTags" ngbTooltip="{{clientTag.tag!.description}}" placement="bottom">{{clientTag.tag!.name}}</span>
 
-            <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Filters"
-                data-bs-toggle="collapse" data-bs-target="#collapseFilters"><i class="fa-solid fa-filter"></i></button>
-            <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Refresh"><i
-                    class="fa-solid fa-refresh"></i></button>
-            <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Upload"><i
-                    class="fa-solid fa-upload"></i></button>
-            <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Download"><i
-                    class="fa-solid fa-download"></i></button>
-            <button class="btn btn-circle btn-circle-primary" placement="bottom" ngbTooltip="Add"
-                (click)="openClientFormModal()"><i class="fa-solid fa-plus"></i></button>
-        </div>
-        <div class="collapse border-bottom bg-light" id="collapseFilters">
-            <div class="p-3">
-                <app-client-filters></app-client-filters>
-            </div>
-        </div>
-        <div class="overflow-auto" style="max-height: calc(100vh - 128px);">
-            <table class="table table-hover mb-0 align-top">
-                <thead>
-                    <tr class="bg-dark text-white text-nowrap">
-                        <th scope="col">Full Name</th>
-                        <th scope="col">Company</th>
-                        <th scope="col">Tags</th>
-                        <th scope="col">Last Contacted</th>
-                        <th scope="col">Updated</th>
-                        <th scope="col">Last Editor</th>
-                    </tr>
-                </thead>
-                <tbody class="border-top">
-                    <tr>
-                        <td colspan="12" class="text-center" *ngIf="loadingClients"> <app-loading-indicator [loading]="loadingClients"></app-loading-indicator> </td>
-                    </tr>
-                    <tr>
-                        <td colspan="12" class="text-center" *ngIf="clients.length == 0 && !loadingClients">No data found</td>
-                    </tr>
-                    <tr *ngFor="let client of clients" (click)="openClientDetailsModal(client)">
-                        <td class="border-end text-nowrap">{{client.firstName}} {{client.lastName}}</td>
-                        <td class="border-end text-wrap" style="max-width: 300px;">{{client.company}}</td>
-                        <td class="text-wrap border-end" style="max-width: 300px;">
-
-                            <span class="badge rounded-pill bg-transparent-primary me-1" *ngFor="let clientTag of client.clientTags" ngbTooltip="{{clientTag.tag!.description}}" placement="bottom">{{clientTag.tag!.name}}</span>
-
-                        </td>
-                        <td class="border-end text-nowrap">{{client.dateLastContacted | date: 'mediumDate'}}</td>
-                        <td class="border-end text-nowrap">{{client.dateUpdated | date: 'mediumDate'}}</td>
-                        <td class="text-nowrap">{{client.lastEditor}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="d-flex px-3 py-2 border-top" *ngIf="!loadingClients && clients.length > 0">
-            <b>{{clients.length}} <span *ngIf="clients.length == 1">result</span><span  *ngIf="clients.length > 1">results</span> found</b>
-        </div>
-    </div>
+                </td>
+                <td class="border-end text-nowrap">{{client.dateLastContacted | date: 'mediumDate'}}</td>
+                <td class="border-end text-nowrap">{{client.dateUpdated | date: 'mediumDate'}}</td>
+                <td class="text-nowrap">{{client.lastEditor}}</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
