--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -1,11 +1,9 @@
-<div class="container mt-3">
-    <!-- <div class="row justify-content-center mb-3">
-        <div class="col-md-8">
-            <h3 class="border-bottom pb-3">Account Settings</h3>
-        </div>
-    </div> -->
+<div class="d-flex align-items-center px-3 py-2 bg-white border-bottom" style="height: 53px;">
+    <h5 class="my-0">Profile</h5>
+</div>
+<div class="container-fluid mt-3">
     <div class="row mb-3 justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header border-bottom-0 bg-secondary">
                     <h5 class="mb-0">Personal Details</h5>
@@ -28,7 +26,7 @@
         </div>
     </div>
     <div class="row justify-content-center mb-3">
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header border-bottom-0 bg-secondary">
                     <h5 class="mb-0">Password</h5>
