--- a/src/app/components/property-details/property-details.component.html
+++ b/src/app/components/property-details/property-details.component.html
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Tags</th>
-                <td class="text-wrap" style="min-width: 340px;"> <span class="badge rounded-pill bg-transparent-primary me-1" *ngFor="let tag of selectedProperty.propertyTags">{{tag.tag!.name}}</span></td>
+                <td>{{selectedProperty.tags}}</td>
             </tr>
             <tr>
                 <th>Price</th>
