--- a/src/app/components/client-details/client-details.component.html
+++ b/src/app/components/client-details/client-details.component.html
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Tags</th>
-                <td class="text-wrap" style="min-width: 340px;"> <span class="badge rounded-pill bg-transparent-primary me-1" *ngFor="let tag of selectedClient.clientTags">{{tag.tag!.name}}</span></td>
+                <td>{{selectedClient.tags}}</td>
             </tr>
             <tr>
                 <th>Email</th>
