--- a/src/app/components/property-form/property-form.component.html
+++ b/src/app/components/property-form/property-form.component.html
@@ -26,7 +26,7 @@
 
     <div class="mb-3">
         <label class="form-label">Tags</label>
-        <app-tag-selector [tags]="tags" (selectedTags)="selectedTagsEventHandler($event)"></app-tag-selector>
+        <!-- <app-tag-selector [tags]="tags" (selectedTags)="selectedTagsEventHandler($event)"></app-tag-selector> -->
     </div>
 
     <div class="mb-3">
