--- a/src/app/views/clients/clients.component.html
+++ b/src/app/views/clients/clients.component.html
@@ -1,29 +1,26 @@
 <div class="d-flex border-bottom align-items-center px-3 py-2 bg-white">
     <h5 class="mb-0 me-auto">Clients</h5>
-    <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Refresh">
+    <button class="btn btn-circle btn-circle-secondary me-1" ngbTooltip="Refresh">
         <i class="fa-solid fa-refresh"></i>
     </button>
-    <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Download">
+    <button class="btn btn-circle btn-circle-secondary me-1" ngbTooltip="Download">
         <i class="fa-solid fa-download"></i>
     </button>
-    <button class="btn btn-circle btn-circle-primary" placement="bottom" ngbTooltip="Add" (click)="openClientFormModal()">
+    <button class="btn btn-circle btn-circle-primary" ngbTooltip="Add" (click)="openClientFormModal()">
         <i class="fa-solid fa-plus"></i>        
     </button>
 </div>
-<div class="d-flex align-items-center px-3 py-2">
+<div class="d-flex align-items-center p-3">
     <div class="input-group w-50 me-2">
-        <input type="search" class="form-control" placeholder="Search name, surname, company..." aria-label="Recipient's username with two button addons">
-        <button class="btn bg-white border" ngbTooltip="Search" placement="bottom"><i class="fa-solid fa-search"></i></button>
-        <button class="btn bg-white border" ngbTooltip="Filters" placement="bottom"><i class="fa-solid fa-filter"></i></button>
+        <input type="search" class="form-control" placeholder="Search name, surname, company..." [formControl]="search" (keydown.enter)="searchClients()">
+        <button class="btn bg-white border" ngbTooltip="Search" (click)="searchClients()"><i class="fa-solid fa-search"></i></button>
+        <button class="btn bg-white border" ngbTooltip="Filters" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"><i class="fa-solid fa-filter"></i></button>
       </div>
-    <span class="me-auto">100 results found</span>
-    <button class="btn btn-link me-2" (click)="resetPage()" [disabled]="loadingClients">Reset</button>
-    <button class="btn bg-white border text-primary" (click)="previousPage()" *ngIf="page > 0" [disabled]="loadingClients || page == 1">Previous</button>
-    <span class="mx-3">Page {{page}}</span>
-    <button class="btn bg-white border text-primary" (click)="nextPage()" [disabled]="loadingClients || this.clients.length == 0">Next</button>
+    <span class="me-auto">{{total}} results found</span>
+    <button class="btn btn-link" (click)="resetPage()" [disabled]="loadingClients">Reset All</button>
 </div>
 <div class="px-3">
-    <table class="table table-hover border bg-white align-middle">
+    <table class="table table-hover border bg-white align-middle mb-0">
         <thead>
             <tr class="bg-dark text-white text-nowrap">
                 <th scope="col">Full Name</th>
@@ -45,12 +42,8 @@
             </tr>
             <tr *ngFor="let client of clients" (click)="openClientDetailsModal(client)">
                 <td class="border-end text-nowrap">{{client.firstName}} {{client.lastName}}</td>
-                <td class="border-end text-wrap" style="max-width: 300px;">{{client.company}}</td>
-                <td class="text-wrap border-end" style="max-width: 300px;">
-
-                    <span class="badge rounded-pill bg-transparent-primary me-1" *ngFor="let clientTag of client.clientTags" ngbTooltip="{{clientTag.tag!.description}}" placement="bottom">{{clientTag.tag!.name}}</span>
-
-                </td>
+                <td class="border-end text-wrap">{{client.company}}</td>
+                <td class="text-wrap border-end">{{client.tags}}</td>
                 <td class="border-end text-nowrap">{{client.dateLastContacted | date: 'mediumDate'}}</td>
                 <td class="border-end text-nowrap">{{client.dateUpdated | date: 'mediumDate'}}</td>
                 <td class="text-nowrap">{{client.lastEditor}}</td>
@@ -58,3 +51,19 @@
         </tbody>
     </table>
 </div>
+<div class="d-flex align-items-center justify-content-center p-3" *ngIf="clients.length > 0">
+    <button class="btn btn-circle btn-circle-secondary" ngbTooltip="Previous" (click)="previousPage()" *ngIf="page > 0" [disabled]="loadingClients || page == 1"><i class="fa-solid fa-arrow-left"></i></button>
+    <span class="mx-3">Page {{page}}</span>
+    <button class="btn btn-circle btn-circle-secondary" ngbTooltip="Next" (click)="nextPage()" [disabled]="loadingClients || this.clients.length == 0"><i class="fa-solid fa-arrow-right"></i></button>
+</div>
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header border-bottom border-top py-2">
+      <h5 class="mb-0">Filters</h5>
+      <button class="btn btn-lg btn-circle btn-circle-secondary" data-bs-dismiss="offcanvas"><i
+        class="fa-solid fa-xmark"></i></button>
+    </div>
+    <div class="offcanvas-body p-0">
+      <app-client-filters></app-client-filters>
+    </div>
+  </div>
