--- a/src/app/views/properties/properties.component.html
+++ b/src/app/views/properties/properties.component.html
@@ -4,7 +4,7 @@
     <button class="btn btn-circle btn-circle-secondary me-1" placement="bottom" ngbTooltip="Download"><i class="fa-solid fa-download"></i></button>
     <button class="btn btn-circle btn-circle-primary" placement="bottom" ngbTooltip="Add" (click)="openPropertyFormModal()"><i class="fa-solid fa-plus"></i></button>
 </div>
-<div class="d-flex align-items-center px-3 py-2">
+<div class="d-flex align-items-center p-3">
     <div class="input-group w-50 me-2">
         <input type="search" class="form-control" placeholder="Search name, owner...">
         <button class="btn bg-white border" ngbTooltip="Search" placement="bottom"><i class="fa-solid fa-search"></i></button>
@@ -38,11 +38,7 @@
             <tr *ngFor="let property of properties" (click)="openPropertyDetailsModal(property)">
                 <td class="border-end">{{property.name}}</td>
                 <td class="border-end">{{property.owner}}</td>
-                <td class="text-wrap border-end">
-
-                    <span class="badge rounded-pill bg-transparent-primary me-1" *ngFor="let tag of property.propertyTags">{{tag.tag!.name}}</span>
-
-                </td>
+                <td class="border-end">{{property.tags}}</td>
                 <td class="border-end">{{property.price}}</td>
                 <td class="border-end">{{property.dateLoi | date: 'mediumDate'}}</td>
                 <td class="border-end">{{property.dateUpdated | date: 'mediumDate'}}</td>
